[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/monochrome.png" type="Texture" id=2]
[ext_resource path="res://Resources/MidnightJunkYard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/HeartTextureRect.tscn" type="PackedScene" id=4]

[sub_resource type="TileSet" id=1]
0/name = "monochrome.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 323, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "monochrome.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 323, 17, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "monochrome.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 323, 34, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
4/name = "monochrome.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 289, 221, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
heartTextRect = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomScreen" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 220.0
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBoundaries" type="ReferenceRect" parent="BottomScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 151.0
margin_right = -737.0
margin_bottom = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroundSpawn" type="ReferenceRect" parent="BottomScreen"]
margin_left = 1023.78
margin_top = 172.0
margin_right = 1055.78
margin_bottom = 332.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AirSpawn" type="ReferenceRect" parent="BottomScreen"]
margin_left = 581.413
margin_top = 7.58739
margin_right = 1010.41
margin_bottom = 50.5874
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="ColorRect" parent="BottomScreen"]
show_behind_parent = true
margin_left = 1.0
margin_top = 136.0
margin_right = 1023.0
margin_bottom = 379.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="BottomScreen/Floor"]
position = Vector2( 0, 3 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 2, 0, 393247, 2, 0 )

[node name="TopScreen" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -380.0
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TopScreen"]
show_behind_parent = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -35.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0.054902, 0.0392157, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="TopScreen/ColorRect"]
position = Vector2( 0, 3 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0 )

[node name="LeftSpawn" type="Control" parent="TopScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 390.0
margin_top = 51.0
margin_right = -594.0
margin_bottom = -18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroundSpawn" type="ReferenceRect" parent="TopScreen/LeftSpawn"]
margin_left = 1.5
margin_top = 120.0
margin_right = 2.5
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AirSpawn" type="ReferenceRect" parent="TopScreen/LeftSpawn"]
margin_left = 1.5
margin_top = 35.0
margin_right = 2.5
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSpawn" type="Control" parent="TopScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 650.0
margin_top = 51.0
margin_right = -334.0
margin_bottom = -18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroundSpawn" type="ReferenceRect" parent="TopScreen/RightSpawn"]
margin_left = 1.5
margin_top = 120.0
margin_right = 2.5
margin_bottom = 121.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AirSpawn" type="ReferenceRect" parent="TopScreen/RightSpawn"]
margin_left = 1.5
margin_top = 35.0
margin_right = 2.5
margin_bottom = 36.0

[node name="PlayerSpot" type="ReferenceRect" parent="TopScreen"]
margin_left = 512.0
margin_top = 170.0
margin_right = 513.0
margin_bottom = 171.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 6.39203
margin_top = 54.133
margin_right = 62.392
margin_bottom = 80.133
custom_fonts/font = SubResource( 2 )
text = "POINTS: "
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="."]
margin_left = 5.50112
margin_top = -2.47345
margin_right = 121.501
margin_bottom = 62.5266
custom_fonts/font = SubResource( 3 )
text = "LIVES: "
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
